--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppAMST_lab3_api"
         tools:targetApi="31">
         <activity
+            android:name=".registro_sensor"
+            android:exported="false" />
+        <activity
             android:name=".red_sensores"
             android:exported="false" />
         <activity
